--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-control-panel",
   "version": "0.1.0",
+  "homepage": "https://vallandingham.me/react-control-panel",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
@@ -8,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "d3": "^5.11.0",
+    "gh-pages": "^2.1.1",
     "js-search": "^1.4.3",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
@@ -31,6 +33,8 @@
     "react-virtualized-select": "3.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
