--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Network Exploration",
-  "name": "Network Exploration",
+  "short_name": "Control Panel",
+  "name": "Control Panel",
   "icons": [
     {
       "src": "favicon.ico",
